[package]
name = "nichijid-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
clap = { version = "4.5.0", features = ["derive"] }
rstest = "0.18.2"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "net", "io-util"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
